# axe-code

./: Cargo.toml  README.md
crates/axe-cli/: Cargo.toml
crates/axe-cli/src/: lib.rs  main.rs  output.rs
crates/axe-cli/src/commands/: completions.rs  lsp.rs  mod.rs  new.rs  run.rs  scan.rs  test.rs
crates/axe-cli/tests/: furling.rs
crates/axe-cli/tests/furling/: chevron1_abydos.rs  chevron3_kawoosh.rs  chevron6_replicator.rs
crates/axe-config/: Cargo.toml
crates/axe-config/src/: combined.rs  compiler.rs  fixer.rs  lib.rs  rule.rs  rule_collection.rs  rule_config.rs  transform.rs
crates/axe-core/: Cargo.toml
crates/axe-core/src/: language.rs  lib.rs  match_tree.rs  matcher.rs  meta_var.rs  node.rs  ops.rs  replacer.rs  source.rs
crates/axe-core/src/match_tree/: strictness.rs
crates/axe-dynamic/: Cargo.toml
crates/axe-dynamic/src/: lib.rs
crates/axe-language/: Cargo.toml
crates/axe-language/src/: lib.rs
crates/axe-lsp/: Cargo.toml
crates/axe-lsp/src/: lib.rs
crates/axe-tree-sitter/: Cargo.toml
crates/axe-tree-sitter/src/: doc.rs  lib.rs  node.rs  owned.rs  pattern.rs  traversal.rs
crates/axe-tree-sitter/tests/: matching.rs
docs/: RULE_AUTHORING.md
