[package]
name = "axe-language"
description = "Built-in language registry for axe — 25+ tree-sitter grammars"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axe-core = { workspace = true }
tree-sitter = { workspace = true }

# Tree-sitter language grammars
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-kotlin = "0.3"
tree-sitter-lua = "0.5"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-toml = "0.20"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"

[dev-dependencies]
insta = { workspace = true }
