[package]
name = "axe-language"
description = "Built-in language registry for axe — 25+ tree-sitter grammars"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axe-core = { workspace = true }
tree-sitter = { workspace = true }

# Tree-sitter language grammars
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-kotlin = { version = "0.4", package = "tree-sitter-kotlin-sg" }
tree-sitter-lua = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-solidity = "1.2"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"

[dev-dependencies]
insta = { workspace = true }
